[package]
name = "node"
version = "0.1.0"
edition = "2021"
authors = ["Prakash <choudharyprakash066@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc = "0.4.0"
webrtc-util = "0.5.3"
tokio-util = "0.7.1"
tokio = { version = "1.17.0", features = ["full"] }
