[package]
name = "node"
version = "0.1.0"
edition = "2021"
authors = ["Prakash <choudharyprakash066@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = "0.7.1"
tokio = { version = "1.17.0", features = ["full"] }
openssl = "0.10.38"
serde = { version = "1.0.136", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["json"] }
hex = "*"
sha3 = "0.10.1"
gtk = "0.15.4"
stun = "0.4.2"
mongodb = "2.1.0"
signaling = { git = "https://github.com/dcnetwork/signaling"}
